--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bsvpush",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Push files to metanet",
   "main": "dist/cli.js",
   "bin": "dist/cli.js",
@@ -14,9 +14,10 @@
   "dependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/node": "^12.6.2",
+    "@types/node-fetch": "^2.3.7",
     "bitindex-sdk": "^3.0.14",
     "bsv": "^0.27.2",
-    "command-line-args": "^5.1.1",
+    "node-fetch": "^2.6.0",
     "readline-promise": "^1.0.4"
   },
   "devDependencies": {
